@@ -1,8 +1,6 @@
 #ifndef PSDDL_HDF2PSANA_PNCCD_DDLM_H
 #define PSDDL_HDF2PSANA_PNCCD_DDLM_H 1
 
-// *** Do not edit this file, it is auto-generated ***
-
 #include "psddl_psana/pnccd.ddl.h"
 #include "hdf5pp/Group.h"
 #include "hdf5pp/Type.h"
