@@ -1,7 +1,6 @@
-
-// *** Do not edit this file, it is auto-generated ***
-
 #include "psddl_hdf2psana/pnccd.ddlm.h"
+
+#include <iterator>
 
 #include "hdf5pp/ArrayType.h"
 #include "hdf5pp/CompoundType.h"
@@ -211,8 +210,9 @@ FullFrameV1_v0<Config>::read_frame() const
     dest = std::copy(src3, src3+512, dest);
   }
 
-  const uint16_t* src1 = &frdata[1][0];
-  const uint16_t* src2 = &frdata[2][0];
+  typedef std::reverse_iterator<const uint16_t*> RevIter;
+  RevIter src1(&frdata[1][512*512]);
+  RevIter src2(&frdata[2][512*512]);
   for (int iY = 0; iY < 512; ++ iY, src1 += 512, src2 += 512) {
     dest = std::copy(src1, src1+512, dest);
     dest = std::copy(src2, src2+512, dest);
